--- a/pcp.html
+++ b/pcp.html
@@ -3,6 +3,10 @@
   <head>
     <script src='http://closure-library.googlecode.com/svn/trunk/closure/goog/base.js'></script>
     <title>PCP solver</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+    <style>
+    textarea { display:block; height: 10em; width: 100%;}
+    </style>
   </head>
 
   <body>
@@ -56,9 +60,7 @@ console.log(genIsSolution(prob, 75, true)(sol));
 
 
     </script>
-    <style>
-    textarea { display:block; height: 10em; width: 100%;}
-    </style>
+
     <h1>PCP</h1>
     <fieldset>
       <legend>In</legend>
